# QA-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2db2b4ec468c_initial_schema.py
backend/app/: celery_app.py  config.py  db.py  deps.py  logging_config.py  main.py
backend/app/auth/: jwt_utils.py  models.py  routes.py  schemas.py  service.py
backend/app/conversations/: models.py  routes.py  schemas.py  service.py
backend/app/documents/: models.py  routes.py  schemas.py  service.py  tasks.py
backend/app/middleware/: request_id.py
backend/app/rag/: agent.py  chroma.py  ingest.py
backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_documents.py  test_rag.py
docs/superpowers/plans/: 2026-04-22-qa-agent-implementation.md
docs/superpowers/specs/: 2026-04-22-qa-agent-python-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatWindow.jsx  ConversationSidebar.jsx  DocumentList.jsx  DocumentSelector.jsx  DocumentUploader.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
