[project]
name = "qa-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "celery[redis]==5.4.0",
    "redis==5.0.4",
    "structlog==24.1.0",
    "langchain==0.2.16",
    "langchain-groq==0.1.10",
    "langchain-chroma==0.1.4",
    "langchain-community==0.2.16",
    "langchain-text-splitters==0.2.4",
    "langgraph==0.2.34",
    "chromadb==0.5.5",
    "pypdf==4.2.0",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
