[project]
name = "qa-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.2.1",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.12",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.29",
    "celery[redis]==5.6.3",
    "redis==6.4.0",
    "structlog==25.5.0",
    "langchain==0.3.30",
    "langchain-groq==0.1.10",
    "langchain-chroma==0.1.4",
    "langchain-community==0.2.16",
    "langchain-text-splitters==0.2.4",
    "langgraph==0.2.34",
    "chromadb==0.5.23",
    "pypdf==6.11.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
